--- a/FrontEnd/src/assets/styles/header.css
+++ b/FrontEnd/src/assets/styles/header.css
@@ -15,7 +15,7 @@ body, h3, p {
  
   top: 0;
   left: 0;
-  z-index: 1000;
+  /* z-index: 1000; */
   display: flex;
 
   flex-direction: column;
@@ -25,7 +25,7 @@ body, h3, p {
   /* position: fixed; */
   width: 100%;
   top: 0;
-  z-index: 1000; /* Assure qu’il est toujours au-dessus */
+ /* Assure qu’il est toujours au-dessus */
 }
 
 .container {
