--- a/FrontEnd/src/assets/styles/we.css
+++ b/FrontEnd/src/assets/styles/we.css
@@ -13,22 +13,23 @@ html, body {
 }
 
 body {
-  
-  min-height: 100vh;
+
 }
 
 
 .we-section {
   width: 100%;
   height: auto;
-  min-height: 80vh;
+  position:relative;
+ 
  
   padding-top:1rem;
   padding-bottom: 1rem;
  
   display: flex;
   flex-direction: column;
-  background-color: black;
+  background: #FCFAF8;
+
   
 }
 
@@ -74,348 +75,243 @@ border-radius: 158.74px;
 
 }
 .we-content{
-   
+    position:relative;
     width:100%;
     height: auto;
     display:flex;
-    flex-direction: row;
+    flex-direction: row-reverse;
     justify-content: center;
     align-items: center;
+    /* flex-wrap: wrap; */
 }
 .we-image{
-    width: 100%;
-    height: auto;
-   position:relative;
-}
-.we-graph1{
-
-  
-    position: absolute;
-    right:0;
-    max-width: 100%;
-    height: auto;
-     max-width: 80%;
-    height: auto;
-
-}
-.we-graph3{
-    position:absolute;
-   
-   
-      max-width: 50%;
-    height: auto;
-    height: auto;
-    left:55%;
-  
- top:3.5vw;
-
-}
-
-.play-boy{
-    position:absolute;
-   
-    height: auto;
-    right:14%;
-   top:2vw
-}
-
-.we-graph4{
-    position:absolute;
-    right:16%;
-}
-.heart{
-    position:absolute;
-
-    width: 35%;
-    height: 35%;
-  top:56vw;
-   left:5%;
-  z-index: 1;
-   
-}
-.we-graph2{
-    position:absolute;
-  
-   left:0;
-   
-  
- 
-}
-.description{
-    position:absolute;
-    width: 40%;
-    height: 55vh;
-    padding: 3rem;
-
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: start;
-    /* padding: 3.5rem; */
-   background: #FFFFFF;
-   /* background-color: pink; */
-   left:12%;top:80%;
-   gap:10px;
-  
-   
-
-
-
-border-radius: 16.8px;
-
-
-
-border-radius: 16.8px;
-
-}
-.name-svg{
-    display: flex;
-    flex-direction: row-reverse;
-    justify-content: end;
-    align-items: center;
-    width: 100%;
-    height: auto;
-    gap: 1rem;
-    padding-right: 2.5rem;
-}
-.name-svg h2{
-  
-     color: #38B000;
-    font-weight: 500;
-    font-size: clamp(1.5rem, 3vw, 3.5rem);
-    display: flex;
-    flex-direction: row-reverse;
-    gap: 1rem;
-}
-.name-svg h2 span {
-  color: #FFC300;
-}
-.description p {
- 
-  font-size: clamp(1rem, 2vw, 1.4rem);
-  line-height: 1.6
-  ;
-  text-align: right;
-  color: #4A4A4A;
-
-   
-}
-.description button {
-  background: #FFB700;
-
-  color: white;
-  padding: 0.5rem 1rem;
-  border: none;
-  border-radius: 8px;
-  cursor: pointer;
+  /* background-color: pink; */
+  position:relative;
+  width:50%;
   display:flex;
-  flex-direction: row;
   justify-content: center;
   align-items: center;
-  font-size: clamp(1rem, 2vw, 1.4rem);
-  font-weight: 500;
-   
- 
+  height: auto;
 }
-.btn-div{
-   width:100%;
-   display: flex;
-   justify-content: right;
-}
-
-
-
-@media (max-width: 1024px) and (min-width: 769px) {
-    .we-section{
-        background:pink;
-     /* min-height: 50vh; */
-  
-height: auto;
-    }
-  .we-graph1 {
-    max-width:38%;
-    top:2vw
-   
-  }
-  .we-graph2 {
-    /* display: none; */
-    max-width:40%;
-  }
-  .we-graph3 {
-   
-    /* display:none; */
-    max-width:35%;
-  top:9vw;
-  left:60%
-  
-   
-  }
-  .we-graph4 {
-    /* display: none; */
-    right:10%;
-  }
-  .play-boy{
-    /* display:none; */
-    max-width: 35%;
-    top:7vw;
-    left:60%;
-
-  }
-  .heart{
-    display:none;
-  }
-  .description{
-    /* display:none; */
-    width:45%; 
-    padding:1rem; 
-    height: auto;
-top:80vw;
-left:10%;
-gap:1rem;
-  }
-}
-
-@media(max-width: 768px)   and (min-width:481px){
- 
- .we-section{
-    background:firebrick;
-    gap:0px;
-   height: auto; 
- }
-
-    
-.we-graph1{
-    /* display:none; */
-    width:50%;
-    
-    right:0;
-    position:absolute;
-}
-.we-graph2{
-   /* display:none; */
-   width:
-   40%;
-   position:absolute;
-   top:80%;
-   /* display:none; */
+.we-description{
+  /* background:red; */
+  width:50%;
+  display:flex;
+  justify-content: center;
+  align-items: center;
+  padding:1rem;
   
 }
-.we-graph3{
-  
-    position:absolute;
-   left:20%;
-   width:100%;
-   top:50%;
-  
-   
-   top:8px;
-}
-.we-graph4{
-   
-    width:25%;
-  right:20%;
- 
-}
-
-.play-boy{
-
-   width:50%;
-   left:22%;
-   top:auto;
-   /* display:none; */
-}
-
 .description{
-  width:60%;
-height: 40vh;
- padding:1rem 2rem;
-margin-top:16vw;
-left:1%;
-gap:0.1rem;
+
+ 
+ width:90%;
+ /* background:pink; */
+ display:flex;
+ flex-direction: column;
+ gap:1rem;
+ justify-content: center;
+ align-items: center;
+ padding:1rem;
+ position:relative;
+
+border-radius: 16.8px;
+background: #FFFFFF;
+
+
+}
+.graph3{
+  position:relative;
+  width:40%;
+  height: auto;
+  margin:3rem;
+}
+.play-boy{
+  position:absolute;
+  max-width:42%;
+  top:6%;
+  right:27%;
+  z-index:10;
+}
+.graph1{
+  position:absolute;
+  max-width:40%;
+  right:0;
+  top:0;
+}
+.graph4{
+  position:absolute;
+  max-width:18%;
+  right:30%;
+  top:0;
+}
+.name-svg{
+  display:flex;
+  flex-direction: row;
+  justify-content: right;
+  align-items: start;
+  width:100%;
+  /* background:darkmagenta; */
+  gap:2rem;
+  /* width:100%; */
+  /* background:burlywood */
+
+}
+.name-svg h2{
+   font-weight: 700;
+    font-size: clamp(1.5rem, 5vw, 2.15rem);
+    color: #38B000;
+    display: flex;
+    gap:1rem;
+    text-align: right;
+
+    
+}
+.name-svg span{
+  color:#FFB700;
+
+}
+.description p{
+  color: #4A4A4A;
+/*  */
+
+font-weight: 400;
+
+
+letter-spacing: 0%;
+text-align: right;
+font-size: clamp(1rem, 2vw, 1.4rem);
+  line-height: 1.6;
+  
+
+}
+.butt{
+  width:100%;
+  display:flex;
+  justify-content: right;
+  align-items: start;
+  /* background: darkorchid; */
+
+}
+.butt button{
+  background: #FFB700;
+  width: 35%;
+ 
+  display:flex;
+  flex-direction: row-reverse;
+  justify-content: center;
+  align-items: center;
+
+font-size: clamp(1rem, 2vw, 1.278rem);
+
+border-radius: 9.09px;
+
+gap: 0.5rem;
+color:white;
+font-weight: 500;
+
+
+}
+.graph2{
+  position:absolute;
+  left:-1%;
+  width:20%;
+  top:-8%;
 }
 .heart{
-    display:none;
-}
-
-
-
-
-
-
-
-
-
-
-
-}
- @media(max-width: 480px) {
-    
-    .we-content {
-    flex-direction: column;
-    align-items: center;
-    /* gap:-900px; */justify-content: space-between;
+  position:absolute;
+  max-width:15%;
+  z-index: 10;
+  left:10%;
+  top:15%;
+ transform: rotate(-8.5deg);
   
+}
+@media(max-width:1024px){
+
+.we-section{
+
+/* background-color: blue */
+
+}
+
+.graph3{
+  width:50%;
+ 
+}
+.play-boy{
+  /* display:none; */
+  max-width:50%;
+  right:23%;
+  top:11%;
+}
+.graph1{
+  /* display:none; */
+  max-width:50%;
+}
+.heart{
+  display:none;
+}
+.we-description{
+  width:70%;
+}
+.description{
+  width:80%;
+ 
+}
+.graph2{
+ /* display:none; */
+ width:30%;
+ /* background:firebrick */
+}
+.graph4{
+  max-width:25%;
+  /* background: darkgoldenrod; */
+  right:15%;top:0;
+}
+
+
+}
+@media(max-width:480px){
+
+
+  .we-section{
+    /* background-color: bisque; */
   }
-  .we-graph2{
-     max-width:40%;
-     top:80%;
+  .we-content{
+    display:flex;
+    flex-direction: column;
+   justify-content: center;
+   align-items: center;
   }
-  .we-graph1{
-    
-    max-width:40%;
+  .we-image{
+    width:100%;
+    padding:0;
   }
-  .we-graph3{
+  .we-description{
+    width:100%;
+  }
+  .graph2{
     /* display:none; */
-    max-width: 40%;
-    left:40%;
-    top:9vw;
-  }
-  .we-graph4{
-  right:12%;
-  max-width:30%;
-top:-5vw;
-  }
-  .play-boy{
-   max-width:40% ;
-   left:42%;
-   top:6vw
+    left:-10%;
+    top:30%;
+    width:50%;
   }
   .description{
-    
-
-    width: 80%;
-    height: auto;
-    left:9%;
-    top: 90%;
-    padding: 1rem;
-    gap: 1rem;
-   background-color: pink;
+    width:100%;
+    margin:0;
   }
-  
-  .name-svg{
-    display:flex;
-    justify-content: start;
-    align-items: center;
-   text-align: center;
-   padding: 0.5rem;
-  
-   width:100%;
-  
-  }
-  .name-svg img {
-  width:30%;
-  height: auto;
-  }
-  
+ .title-svg img{
+  /* background-color:red; */
+  max-width:10%;
  }
+  .butt button{
+display:flex;
+justify-content: center;
+align-items: center;
+/* padding-left:1.5rem;
+padding-right:1.5rem; */
+width:40%;
 
- 
- 
-
-
-
-
-
-  
-
-  
+ }
+}
